# GiantSan-Artifact

./: .gitattributes  Dockerfile  GiantSan.cfg  README.md  activeASan.sh  activeGiantSan.sh  run.py
LLVM-ASan/lib/: libc++.so.1.0  libc++abi.so.1.0  libclang-cpp.so.12  libclang.so.12
LLVM-GiantSan/lib/: libRemarks.so.12  libc++.so.1.0  libc++abi.so.1.0  libclang-cpp.so.12  libclang.so.12  libomptarget.so.12
juliet/: Makefile  benchmark_config  create_per_cwe_files.py  diff.py  handler.py  log  run.py  test_result.data
juliet/testcases/CWE114_Process_Control/: main.cpp  testcases.h
juliet/testcases/CWE123_Write_What_Where_Condition/: CWE123.bat  CWE123_Write_What_Where_Condition__fgets_03.out.err  CWE123_Write_What_Where_Condition__fgets_05.out.err  CWE123_Write_What_Where_Condition__fgets_07.out.err  CWE123_Write_What_Where_Condition__fgets_08.out.err  CWE123_Write_What_Where_Condition__fgets_11.out.err  CWE123_Write_What_Where_Condition__fgets_12.out.err  CWE123_Write_What_Where_Condition__fgets_13.out.err  CWE123_Write_What_Where_Condition__fgets_17.out.err  CWE123_Write_What_Where_Condition__fgets_21.out.err  CWE123_Write_What_Where_Condition__fgets_22.out.err  CWE123_Write_What_Where_Condition__fgets_31.out.err  CWE123_Write_What_Where_Condition__fgets_32.out.err  CWE123_Write_What_Where_Condition__fgets_41.out.err  CWE123_Write_What_Where_Condition__fgets_42.out.err  CWE123_Write_What_Where_Condition__fgets_44.out.err  CWE123_Write_What_Where_Condition__fgets_45.out.err  CWE123_Write_What_Where_Condition__fgets_51.out.err  CWE123_Write_What_Where_Condition__fgets_52.out.err  CWE123_Write_What_Where_Condition__fgets_53.out.err  CWE123_Write_What_Where_Condition__fgets_54.out.err  CWE123_Write_What_Where_Condition__fgets_61.out.err  CWE123_Write_What_Where_Condition__fgets_63.out.err  CWE123_Write_What_Where_Condition__fgets_64.out.err  CWE123_Write_What_Where_Condition__fgets_65.out.err  CWE123_Write_What_Where_Condition__fgets_66.out.err  CWE123_Write_What_Where_Condition__fgets_67.out.err  CWE123_Write_What_Where_Condition__fgets_68.out.err  Makefile  main_linux.cpp  testcases.h
juliet/testcases/CWE15_External_Control_of_System_or_Configuration_Setting/: CWE15.bat  main.cpp  testcases.h
juliet/testcases/CWE176_Improper_Handling_of_Unicode_Encoding/: CWE176.bat  main.cpp  testcases.h
juliet/testcases/CWE188_Reliance_on_Data_Memory_Layout/: CWE188_Reliance_on_Data_Memory_Layout__modify_local_02.out.err  CWE188_Reliance_on_Data_Memory_Layout__modify_local_07.out.err  CWE188_Reliance_on_Data_Memory_Layout__union_02.out.err  CWE188_Reliance_on_Data_Memory_Layout__union_05.out.err  CWE188_Reliance_on_Data_Memory_Layout__union_07.out.err  CWE188_Reliance_on_Data_Memory_Layout__union_08.out.err  (+6 more)
juliet/testcasesupport/: io.c
linuxflaw/: run.py
linuxflaw/autotrace/: Makefile  run.py
linuxflaw/autotrace/autotrace-0.31.1/: .__autoconf_trace_data  INSTALL  Makefile  Makefile.am  Makefile.in  aclocal.m4  autotrace  autotrace-config  autotrace-config.in  autotrace.dsp  autotrace.h  autotrace.lo  autotrace.pc  autotrace.pc.in  autotrace.spec  autotrace.spec.in  autotrace.vcproj  bitmap.lo  color.lo  config.h  config.h.in  config.h.in~  config.status  configure  configure.in  curve.c  curve.lo  despeckle.lo  epsilon-equal.lo  exception.lo  filename.lo  fit.c  fit.lo  image-proc.lo  input-bmp.c  input-bmp.lo  input-magick.c  input-magick.lo  input-png.c  input-png.lo  (+37 more)
linuxflaw/autotrace/autotrace-0.31.1/.libs/: autotrace  libautotrace.la  libautotrace.lai  libautotrace.so.3  libautotrace.so.3.0.0
linuxflaw/autotrace/autotrace-0.31.1/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
linuxflaw/autotrace/autotrace-0.31.1/debian/: changelog  control  copyright  libautotrace-dev.install  rules
linuxflaw/imageworsener/: Makefile  run.py
linuxflaw/lame/: Makefile  run.py
linuxflaw/libtiff/: Makefile  log  run.py
linuxflaw/libzip/: Makefile  run.py
linuxflaw/mp3gain/: Makefile  run.py
linuxflaw/potrace/: Makefile  run.py
linuxflaw/potrace/potrace-1.2/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.win  config.cache  config.h  config.h.in  config.status  configure  configure.in  mkinstalldirs
linuxflaw/potrace/potrace-1.2/check/: Makefile  Makefile.am  Makefile.in  backend-check.sh  faces.pgm.out  input-check.sh  missing.sh  pgmdiff.c  postscript-check.sh  potrace-check.sh
linuxflaw/potrace/potrace-1.2/doc/: Makefile  Makefile.am  Makefile.in  mkbitmap.1  mkbitmap.1.in  potrace.1  potrace.1.in  potrace.ps
linuxflaw/potrace/potrace-1.2/src/: Makefile  Makefile.am  Makefile.in  backend_eps.c  backend_eps.h  backend_gimp.c  backend_gimp.h  backend_pgm.c  backend_pgm.h  backend_svg.c  backend_svg.h  backend_xfig.c  backend_xfig.h  bitmap.c  bitmap.h  curve.c  curve.h  flate.c  flate.h  greymap.c  greymap.h  lists.h  main.c  main.h  mkbitmap.c  path.c  path.h  render.c  render.h  ztops.c  ztops.h
linuxflaw/zziplib/: Makefile  run.py
magma/: afl_driver.cpp  build.sh  patch.sh  run.py
magma/exif_poc/: afl_php_exif_MAE008.2Db  afl_php_exif_MAE008.2ZE  afl_php_exif_MAE008.78G  afl_php_exif_MAE008.8jY  afl_php_exif_MAE008.9y3  afl_php_exif_MAE008.Aml  afl_php_exif_MAE008.Ix1  afl_php_exif_MAE008.Xxw  afl_php_exif_MAE008.avV  afl_php_exif_MAE008.dW6  afl_php_exif_MAE008.pi5  afl_php_exif_MAE008.urC  afl_php_exif_MAE008.wct  afl_php_exif_MAE014.7A9  afl_php_exif_MAE014.FdO  afl_php_exif_MAE014.JXH  afl_php_exif_MAE014.VPE  afl_php_exif_MAE014.WzM  afl_php_exif_MAE014.YuF  afl_php_exif_MAE014.ZU0  afl_php_exif_MAE014.a34  afl_php_exif_MAE014.bvq  afl_php_exif_MAE014.cyC  afl_php_exif_MAE014.qEk  afl_php_exif_MAE016.0Kw  afl_php_exif_MAE016.0Q6  afl_php_exif_MAE016.13q  afl_php_exif_MAE016.185  afl_php_exif_MAE016.1f0  afl_php_exif_MAE016.1p8  afl_php_exif_MAE016.26v  afl_php_exif_MAE016.2Pg  afl_php_exif_MAE016.2eq  afl_php_exif_MAE016.2oZ  afl_php_exif_MAE016.32j  afl_php_exif_MAE016.3Ev  afl_php_exif_MAE016.3hS  afl_php_exif_MAE016.3jh  afl_php_exif_MAE016.4FS  afl_php_exif_MAE016.4MG  (+1410 more)
magma/repo/: run-tests.php
(+2315 files in other folders)
